K8s/base/ad/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adservice
  labels:
    app: adservice
    app.kubernetes.io/version: "1.12.0"
    app.kubernetes.io/part-of: opentelemetry-demo
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: adservice
  template:
    metadata:
      labels:
        app: adservice
    spec:
      containers:
        - name: adservice
          image: ghcr.io/open-telemetry/demo:1.12.0-adservice
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: service
          resources:
            requests:
              cpu: "100m"
              memory: "150Mi"
            limits:
              cpu: "200m"
              memory: "300Mi"
