K8s/base/ad/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: adservice
spec:
  podSelector:
    matchLabels:
      app: adservice
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend
      ports:
        - port: 8080
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: opentelemetry-demo-otelcol
      ports:
        - port: 4318
    - to:
        - podSelector:
            matchLabels:
              app: flagd
      ports:
        - port: 8013
    - to:
        - namespaceSelector: {}
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
